--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,11 @@
-bcrypt==4.3.0
-beautifulsoup4==4.13.4
-extra-streamlit-components==0.1.80
-groq==0.23.1
-idna==3.10
-Jinja2==3.1.6
-joblib==1.4.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2025.4.1
-langchain==0.3.24
-langchain-community==0.3.23
-langchain-core==0.3.56
-langchain-groq==0.3.2
-langchain-text-splitters==0.3.8
-langsmith==0.3.38
-numpy==2.2.5
-pandas==2.2.3
-python-dotenv==1.1.0
-requests==2.32.3
-scikit-learn==1.6.1
-scipy==1.15.2
-statsmodels==0.14.4
 streamlit==1.45.0
 streamlit-authenticator==0.4.2
+pandas==2.2.3
 yfinance==0.2.57
 ta==0.11.0
 openpyxl==3.1.5
+python-dotenv==1.1.0
+customtkinter==5.2.2
+groq==0.23.1
+langchain==0.3.24
+langchain-groq==0.3.2
